# WhatShouldWePlay

./: .cspell.json  DiscordBot.py  README.md  pip-requirements.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-workflow.yml
docs/: developing.md  merging.md
src/: UnitTests.py  main.py  orm.py  steamapi.py
src/cog/: __init__.py  converter.py  server.py  ui.py  user.py
src/tests/: UnitTests.py
tests/: UnitTests.py  test_sample.py  test_webhook.py
